--- a/PatiliDostlarVTN/Views/Referanslar/Referanslar.cshtml
+++ b/PatiliDostlarVTN/Views/Referanslar/Referanslar.cshtml
@@ -1,11 +1,11 @@
-﻿
+﻿@model List<PatiliDostlarVTN.Models.Entities.Comment>
 
 <section class="container py-5">
     <div class="row pt-5">
         <div class="worksingle-content col-lg-8 m-auto text-left justify-content-center">
             <h2 class="worksingle-heading h3 pb-3 light-300 typo-space-line">Görüşleriniz Bizim İçin Önemli</h2>
             <p class="worksingle-footer py-3 text-muted light-300">
-                Patili Dostlar Hastanesi olarak, sevimli dostlarınıza en iyi hizmeti sunabilmek adına sürekli olarak kendimizi yeniliyoruz. Sizleri ve evcil dostlarınızı uzman ve sevgi dolu ekibimizle tanışmaya davet ediyoruz.
+                Patili Dostlar Hastanesi olarak, sevimli dostlarınıza en iyi hizmeti sunabilmek adına sürekli olarak kendimizi yeniliyoruz.
             </p>
         </div>
     </div>
@@ -17,17 +17,9 @@
                     ”Ben size Allah’dan korkunuz, hayvanları incitmeyiniz, rahatlarını bozmayınız demiyor muyum?”
                 </i>
                 <br />
-                <br />
             </p>
-            <footer class="blockquote-footer">Hz. Muhammed</footer>
             <br />
-            <p>
-                <i>
-                    “Hayatımı tamamen hayvanlara yardım etmeye adamamın sebebi; hali hazırda onlara zarar vermeye kendini adamış bu kadar çok insanın olması.”
-                </i>
-                <br />
-            </p>
-            <footer class="blockquote-footer">Buddy Greyhound</footer>
+            <footer class="blockquote-footer">Hz. Muhammed</footer>
         </blockquote>
     </div>
 
@@ -70,21 +62,21 @@
             <h4 class="h5">Yorum Bırak</h4>
 
             <!-- Mesajlar -->
-            @if (!string.IsNullOrEmpty(ViewData["SuccessMessage"]?.ToString()))
+            @if (!string.IsNullOrEmpty(TempData["SuccessMessage"]?.ToString()))
             {
                 <div class="alert alert-success" role="alert">
-                    @ViewData["SuccessMessage"]
+                    @TempData["SuccessMessage"]
                 </div>
             }
 
-            @if (!string.IsNullOrEmpty(ViewData["ErrorMessage"]?.ToString()))
+            @if (!string.IsNullOrEmpty(TempData["ErrorMessage"]?.ToString()))
             {
                 <div class="alert alert-danger" role="alert">
-                    @ViewData["ErrorMessage"]
+                    @TempData["ErrorMessage"]
                 </div>
             }
 
-            <form class="col-md-12 m-auto" method="POST" action="/Referanslar/Referans" role="form">
+            <form class="col-md-12 m-auto" method="POST" action="@Url.Action("Referans", "Referanslar")" role="form">
                 <div class="form-group">
                     <label class="pb-2 pt-sm-0 pt-4 light-300" for="inputmessage">Senin Yorumun</label>
                     <textarea class="form-control form-control-lg light-300" id="inputmessage" name="inputmessage" placeholder="Senin Yorumun" rows="5" required></textarea>
@@ -94,10 +86,6 @@
                     <div class="col-lg-6">
                         <label class="pb-2 light-300" for="inputname">Adınız</label>
                         <input type="text" class="form-control form-control-lg light-300" id="inputname" name="inputname" placeholder="Adınız" required>
-                    </div>
-                    <div class="col-lg-6">
-                        <label class="pb-2 pt-sm-0 pt-4 light-300" for="inputemail">Eposta</label>
-                        <input type="email" class="form-control form-control-lg light-300" id="inputemail" name="inputemail" placeholder="Eposta" required>
                     </div>
                 </div>
 
